<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <TextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_plant_diseases_detection"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <TextView
            android:id="@+id/tv_login_subtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/help_your_plants_stay_healthy"
            android:textAlignment="center"
            android:textColor="@color/text_secondary_dark"
            android:textSize="16sp"
            android:layout_gravity="center_horizontal"
            />

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_marginTop="40dp"
            android:contentDescription="App Logo"
            android:src="@drawable/ic_profile_placeholder"
            android:layout_gravity="center_horizontal"/>

        <Button
            android:id="@+id/btn_sign_in"
            android:layout_width="260dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:background="@drawable/button_background"
            android:padding="12dp"
            android:text="@string/sign_in_with_google"
            android:textColor="@color/white"
            app:icon="@drawable/googleg_standard_color_18"
            app:backgroundTint="@null"
            android:layout_gravity="center_horizontal"/>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:indeterminateTint="@color/green_primary"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>
