<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".fragments.ScanFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout
            android:id="@+id/initialLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="16dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">


            <TextView
            android:id="@+id/scanTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/scan_plant"
                android:fontFamily="@font/font"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            android:paddingBottom="12dp"/>

            <LinearLayout
                android:id="@+id/preview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:padding="20dp">
                    <ImageView
                        android:id="@+id/iv_plant_image"
                        android:layout_width="match_parent"
                        android:layout_height="200dp"
                        android:adjustViewBounds="true"
                        android:background="@color/green_light"
                        android:contentDescription="Plant Image"
                        android:scaleType="centerCrop" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:background="@drawable/bg_card"
                    android:padding="20dp"
                    android:layout_marginTop="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Plant Information"
                        android:fontFamily="@font/font"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:hint="Plant type">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_plant_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="Plant age">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_plant_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font"
                            android:inputType="text" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:hint="Growing condition">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_growing_conditions"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="@font/font"
                            android:inputType="textMultiLine"
                            android:minLines="2" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <Button
                        android:id="@+id/btn_analyze"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="16dp"
                        android:textAllCaps="false"
                        android:fontFamily="@font/font"
                        android:textSize="16sp"
                        android:textColor="#FFFFFF"
                        android:backgroundTint="#388E3C"
                        android:text="@string/analyze" />
                </LinearLayout>

            </LinearLayout>

<!--            SCAN-->
            <LinearLayout
                android:id="@+id/scan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_card"
                android:orientation="vertical"
                android:visibility="visible"
                android:padding="20dp">

                <ImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_camera" android:layout_gravity="center_horizontal"
                    app:tint="#388E3C"/>

                <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/ready_to_scan_your_plants"
                android:textAlignment="center"
                android:textSize="20sp"
                    android:fontFamily="@font/font"
                android:textStyle="bold"
                android:layout_marginTop="12dp" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/scan_des"
                    android:textAlignment="center"
                    android:fontFamily="@font/font"
                    android:textColor="@android:color/darker_gray"
                    android:textSize="16sp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="16dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="16dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_check"
                        android:drawablePadding="8dp"
                        android:text="@string/check1"
                        android:fontFamily="@font/font"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_check"
                        android:drawablePadding="8dp"
                        android:text="@string/check2"
                        android:fontFamily="@font/font"
                        android:textSize="16sp"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableStart="@drawable/ic_check"
                        android:drawablePadding="8dp"
                        android:text="@string/check3"
                        android:fontFamily="@font/font"
                        android:textSize="16sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnScan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/start_camera"
                    android:fontFamily="@font/font"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:backgroundTint="#388E3C"
                    android:textSize="16sp"
                    app:icon="@drawable/ic_cap"
                    app:iconPadding="8dp"
                    app:iconTint="#FFFFFF"
                    android:layout_marginBottom="8dp"/>

                <Button
                    android:id="@+id/btnSelectImage"
                    style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                    app:icon="@drawable/ic_gallery"
                    app:iconPadding="8dp"
                    app:iconTint="#388E3C"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/choose_from_gallery"
                    android:textSize="16sp"
                    android:fontFamily="@font/font"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:textColor="#388E3C" />
            </LinearLayout>

        </LinearLayout>


        <!-- Loading Progress -->
            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:indeterminateTint="@color/green_primary"
                android:indeterminate="true"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"/>


</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>